--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -451,10 +451,10 @@
 @slider-track-background-color-hover: @primary-4;
 @slider-handle-color:                 @primary-3;
 @slider-handle-color-hover:           @primary-4;
-@slider-handle-color-focus:           tint(@primary-color, 20%);
-@slider-handle-color-focus-shadow:    tint(@primary-color, 50%);
+@slider-handle-color-focus:           @primary-5; // tint(@primary-color, 20%);
+@slider-handle-color-focus-shadow:    @primary-4; // tint(@primary-color, 50%);
 @slider-handle-color-tooltip-open:    @primary-color;
 @slider-dot-border-color:             @border-color-split;
-@slider-dot-border-color-active:      tint(@primary-color, 50%);
+@slider-dot-border-color-active:      @primary-4; // tint(@primary-color, 50%);
 @slider-disabled-color:               @disabled-color;
 @slider-disabled-background-color:    @component-background;
