fix: modify style

--- a/components/date-picker/style/Calendar.less
+++ b/components/date-picker/style/Calendar.less
@@ -211,7 +211,8 @@
   }
 
   &-selected-day &-date {
-    background: tint(@primary-color, 80%);
+    // background: tint(@primary-color, 80%);
+    background: @primary-2;
   }
 
   &-selected-date, &-selected-start-date, &-selected-end-date {
