--- a/components/notification/style/index.less
+++ b/components/notification/style/index.less
@@ -118,7 +118,7 @@
       }
 
       &:hover {
-        color: shade(@text-color-secondary, 40%);
+        // color: shade(@text-color-secondary, 40%);
       }
     }
 
